--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "allowJs": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "resolveJsonModule": true
   },
   "files": [],
   "include": [],
