--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
   },
   "dependencies": {
     "@types/lodash.clonedeep": "^4.5.7",
+    "file-loader": "^6.2.0",
     "json-loader": "^0.5.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "webpack-merge": "^5.8.0"
   }
 }
